src/foo/parser/FTAParser.java
/* Generated By:JavaCC: Do not edit this line. FTAParser.java */
package foo.parser;

import foo.parser.FTAParserConstants;
import foo.parser.FTAParserTokenManager;
import foo.parser.ParseException;
import foo.parser.SimpleCharStream;
import foo.parser.Token;
import foo.parser.syntaxtree.*;

import java.util.ArrayList;
import java.util.Vector;

public class FTAParser implements FTAParserConstants {

    public TAModel FTA() throws foo.parser.ParseException {
        final TAModel data = new TAModel();
        NodeChoice n0;
        TimbukFTA n1;
        PrologFTA n2;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case OPS:
                n1 = TimbukFTA(data);
                n0 = new NodeChoice(n1, 0);
                break;
            case 0:
            case FINAL:
            case TRANSITIONS:
            case LBRACE:
            case LSQBRACE:
            case ANYOP:
            case NUMBER:
            case IDENTIFIER:
            case QIDENT:
                n2 = PrologFTA(data);
                n0 = new NodeChoice(n2, 1);
                break;
            default:
                jj_la1[0] = jj_gen;
                jj_consume_token(-1);
                throw new foo.parser.ParseException();
        }
        return data;
    }

    final public TimbukFTA TimbukFTA(TAModel data) throws foo.parser.ParseException {
        OpsDecls n0;
        Automaton n1;
        States n2;
        FinalStates n3;
        TimbukTransitions n4;
        NodeToken n5;
        foo.parser.Token n6;
        n0 = OpsDecls();
        n1 = Automaton();
        n2 = States();
        n3 = FinalStates(data);
        n4 = TimbukTransitions(data);
        n6 = jj_consume_token(0);
        n6.beginColumn++;
        n6.endColumn++;
        n5 = JTBToolkit.makeNodeToken(n6);
        {
            if (true) return new TimbukFTA(n0, n1, n2, n3, n4, n5);
        }
        throw new Error("Missing return statement in function");
    }

    final public OpsDecls OpsDecls() throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        LabelList n2;
        n1 = jj_consume_token(OPS);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = LabelList();
        {
            if (true) return new OpsDecls(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public LabelList LabelList() throws foo.parser.ParseException {
        NodeListOptional n0 = new NodeListOptional();
        LabelDecl n1;
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                    ;
                    break;
                default:
                    jj_la1[1] = jj_gen;
                    break label_1;
            }
            n1 = LabelDecl();
            n0.addNode(n1);
        }
        n0.nodes.trimToSize();
        {
            if (true) return new LabelList(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public LabelDecl LabelDecl() throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        NodeToken n2;
        foo.parser.Token n3;
        NodeToken n4;
        foo.parser.Token n5;
        n1 = jj_consume_token(IDENTIFIER);
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(COLON);
        n2 = JTBToolkit.makeNodeToken(n3);
        n5 = jj_consume_token(NUMBER);
        n4 = JTBToolkit.makeNodeToken(n5);
        {
            if (true) return new LabelDecl(n0, n2, n4);
        }
        throw new Error("Missing return statement in function");
    }

    final public Automaton Automaton() throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        NodeToken n2;
        foo.parser.Token n3;
        n1 = jj_consume_token(AUTOMATON);
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(IDENTIFIER);
        n2 = JTBToolkit.makeNodeToken(n3);
        {
            if (true) return new Automaton(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public States States() throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        StateList n2;
        n1 = jj_consume_token(STATES);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = StateList();
        {
            if (true) return new States(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public StateList StateList() throws foo.parser.ParseException {
        NodeListOptional n0 = new NodeListOptional();
        NodeSequence n1;
        Ident n2;
        NodeOptional n3;
        NodeSequence n4;
        NodeToken n5;
        foo.parser.Token n6;
        NodeToken n7;
        foo.parser.Token n8;
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                case QIDENT:
                    ;
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
            }
            n3 = new NodeOptional();
            n1 = new NodeSequence(2);
            n2 = Ident();
            n1.addNode(n2);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case COLON:
                    n4 = new NodeSequence(2);
                    n6 = jj_consume_token(COLON);
                    n5 = JTBToolkit.makeNodeToken(n6);
                    n4.addNode(n5);
                    n8 = jj_consume_token(NUMBER);
                    n7 = JTBToolkit.makeNodeToken(n8);
                    n4.addNode(n7);
                    n3.addNode(n4);
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    ;
            }
            n1.addNode(n3);
            n0.addNode(n1);
        }
        n0.nodes.trimToSize();
        {
            if (true) return new StateList(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public FinalStates FinalStates(TAModel data) throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        NodeToken n2;
        foo.parser.Token n3;
        Ident n4;
        NodeListOptional n5 = new NodeListOptional();
        Ident n6;
        n1 = jj_consume_token(FINAL);
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(STATES);
        n2 = JTBToolkit.makeNodeToken(n3);
        n4 = Ident();
        data.final_states.add(((NodeToken) n4.f0.choice).tokenImage);
        label_3:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                case QIDENT:
                    ;
                    break;
                default:
                    jj_la1[4] = jj_gen;
                    break label_3;
            }
            n6 = Ident();
            data.final_states.add(((NodeToken) n6.f0.choice).tokenImage);
            n5.addNode(n6);
        }
        n5.nodes.trimToSize();
        {
            if (true) return new FinalStates(n0, n2, n4, n5);
        }
        throw new Error("Missing return statement in function");
    }

    final public TimbukTransitions TimbukTransitions(TAModel data) throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        TimbukTransitionList n2;
        n1 = jj_consume_token(TRANSITIONS);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = TimbukTransitionList(data);
        {
            if (true) return new TimbukTransitions(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public TimbukTransitionList TimbukTransitionList(TAModel data) throws foo.parser.ParseException {
        NodeListOptional n0 = new NodeListOptional();
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LBRACE:
                case LSQBRACE:
                case ANYOP:
                case NUMBER:
                case IDENTIFIER:
                case QIDENT:
                    ;
                    break;
                default:
                    jj_la1[5] = jj_gen;
                    break label_4;
            }
            final Transition transition = Transition();
            int k1;
            String f11 = "";
            Node n;
            final int lhsKind = transition.f0.f0.which;
            final NodeSequence ns = (NodeSequence) transition.f0.f0.choice;
            switch (lhsKind) {
                case 0 -> {
                    k1 = ((NodeChoice) ns.elementAt(1)).which;
                    n = ((NodeChoice) ns.elementAt(1)).choice;
                    f11 = ((Ident) ns.elementAt(0)).f0.choice.toString();
                    switch (k1) {
                        case 0, 1:
                            break;
                        case 2, 4, 3:
                            f11 = ((NodeSequence) n).elementAt(0).toString();
                            break;
                    }
                }
                case 1 -> f11 = ns.elementAt(0).toString();
                case 2 -> {
                    String f1 = ns.elementAt(0).toString();
                    n = ((NodeChoice) ns.elementAt(1)).choice;
                    int k2 = ((NodeChoice) ns.elementAt(1)).which;
                    String f2;
                    switch (k2) {
                        case 0 -> {
                            f2 = n.toString();
                            f11 = f1 + f2;
                        }
                        case 1 -> f11 = f1;
                    }
                }
                case 3 -> {
                    k1 = ((NodeChoice) ns.elementAt(1)).which;
                    f11 = switch (k1) {
                        case 0 -> "cons";
                        case 1 -> "[]";
                        default -> f11;
                    };
                }
                case 4 -> {
                    k1 = ((NodeChoice) ns.elementAt(2)).which;
                    f11 = switch (k1) {
                        case 0, 1 -> ((NodeChoice) ns.elementAt(2)).choice.toString();
                        default -> f11;
                    };
                }
            }
            int k11;
            ArrayList<String> args1 = new ArrayList<>();
            Node n1;
            final int lhsKind1 = transition.f0.f0.which;
            final NodeSequence ns1 = (NodeSequence) transition.f0.f0.choice;
            switch (lhsKind1) {
                case 0:
                    k11 = ((NodeChoice) ns1.elementAt(1)).which;
                    n1 = ((NodeChoice) ns1.elementAt(1)).choice;
                    switch (k11) {
                        case 0:
                            final NodeOptional nopt = (NodeOptional) ((NodeSequence) n1).elementAt(1);
                            if (nopt.present()) {
                                NodeSequence ns2 = (NodeSequence) nopt.node;
                                Ident id = (Ident) ns2.elementAt(0);
                                NodeListOptional nlo1 = (NodeListOptional) ns2.elementAt(1);
                                Vector<Node> l = nlo1.nodes;
                                args1.add(0, id.f0.choice.toString());
                                NodeSequence commaArg;
                                for (int i = 0; i < l.size(); i++) {
                                    commaArg = (NodeSequence) l.elementAt(i);
                                    id = (Ident) commaArg.elementAt(1);
                                    args1.add(i + 1, id.f0.choice.toString());
                                }
                            }
                            break;
                        case 1:
                            break;
                        case 2, 3, 4:
                            args1.add(0, ((Ident) ns1.elementAt(0)).f0.choice.toString());
                            args1.add(1, ((Ident) ((NodeSequence) n1).elementAt(1)).f0.choice.toString());
                            break;
                    }
                    break;
                case 1:
                    break;
                case 2:
                    n1 = ((NodeChoice) ns1.elementAt(1)).choice;
                    int k2 = ((NodeChoice) ns1.elementAt(1)).which;
                    switch (k2) {
                        case 0 -> args1.add(0, n1.toString());
                        case 1 -> args1.add(0, ((Ident) n1).f0.choice.toString());
                    }
                    break;
                case 3:
                    k11 = ((NodeChoice) ns1.elementAt(1)).which;
                    n1 = ((NodeChoice) ns1.elementAt(1)).choice;
                    switch (k11) {
                        case 0:
                            args1.add(0, ((Ident) ((NodeSequence) n1).elementAt(0)).f0.choice.toString());
                            args1.add(1, ((Ident) ((NodeSequence) n1).elementAt(2)).f0.choice.toString());
                            break;
                        case 1:
                            break;
                    }
                    break;
                case 4:
                    args1.add(0, ((Ident) ns1.elementAt(1)).f0.choice.toString());
                    args1.add(1, ((Ident) ns1.elementAt(3)).f0.choice.toString());
                    break;
            }
            data.transitions.add(new TAModelTransition(transition.f1.f0.f0.choice.toString(), args1, f11));
            n0.addNode(transition);
        }
        n0.nodes.trimToSize();
        {
            if (true) return new TimbukTransitionList(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public PrologFTA PrologFTA(TAModel data) throws foo.parser.ParseException {
        NodeOptional n0 = new NodeOptional();
        PrologFinalStates n1;
        NodeOptional n2 = new NodeOptional();
        NodeSequence n3;
        NodeToken n4;
        foo.parser.Token n5;
        NodeToken n6;
        foo.parser.Token n7;
        PrologTransitions n8;
        NodeToken n9;
        foo.parser.Token n10;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case FINAL:
                n1 = PrologFinalStates(data);
                n0.addNode(n1);
                break;
            default:
                jj_la1[6] = jj_gen;
                ;
        }
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case TRANSITIONS:
                n3 = new NodeSequence(2);
                n5 = jj_consume_token(TRANSITIONS);
                n4 = JTBToolkit.makeNodeToken(n5);
                n3.addNode(n4);
                n7 = jj_consume_token(FULLSTOP);
                n6 = JTBToolkit.makeNodeToken(n7);
                n3.addNode(n6);
                n2.addNode(n3);
                break;
            default:
                jj_la1[7] = jj_gen;
                ;
        }
        n8 = PrologTransitions(data);
        n10 = jj_consume_token(0);
        n10.beginColumn++;
        n10.endColumn++;
        n9 = JTBToolkit.makeNodeToken(n10);
        {
            if (true) return new PrologFTA(n0, n2, n8, n9);
        }
        throw new Error("Missing return statement in function");
    }

    final public PrologFinalStates PrologFinalStates(TAModel data) throws foo.parser.ParseException {
        NodeToken n0;
        foo.parser.Token n1;
        NodeToken n2;
        foo.parser.Token n3;
        Ident n4;
        NodeListOptional n5 = new NodeListOptional();
        Ident n6;
        NodeToken n7;
        foo.parser.Token n8;
        n1 = jj_consume_token(FINAL);
        n0 = JTBToolkit.makeNodeToken(n1);
        n3 = jj_consume_token(STATES);
        n2 = JTBToolkit.makeNodeToken(n3);
        n4 = Ident();
        data.final_states.add(((NodeToken) n4.f0.choice).tokenImage);
        label_5:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case IDENTIFIER:
                case QIDENT:
                    ;
                    break;
                default:
                    jj_la1[8] = jj_gen;
                    break label_5;
            }
            n6 = Ident();
            data.final_states.add(((NodeToken) n6.f0.choice).tokenImage);
            n5.addNode(n6);
        }
        n5.nodes.trimToSize();
        n8 = jj_consume_token(FULLSTOP);
        n7 = JTBToolkit.makeNodeToken(n8);
        {
            if (true) return new PrologFinalStates(n0, n2, n4, n5, n7);
        }
        throw new Error("Missing return statement in function");
    }

    final public PrologTransitions PrologTransitions(TAModel data) throws foo.parser.ParseException {
        NodeListOptional n0 = new NodeListOptional();
        NodeSequence n1;
        Transition n2;
        NodeToken n3;
        foo.parser.Token n4;
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case LBRACE:
                case LSQBRACE:
                case ANYOP:
                case NUMBER:
                case IDENTIFIER:
                case QIDENT:
                    ;
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    break label_6;
            }
            n1 = new NodeSequence(3);
            n2 = Transition();
            n1.addNode(n2);
            n4 = jj_consume_token(FULLSTOP);
            n3 = JTBToolkit.makeNodeToken(n4);
            n1.addNode(n3);
            final Transition transition = n2;
            int k1;
            String f11 = "";
            Node n;
            final int lhsKind = transition.f0.f0.which;
            final NodeSequence ns = (NodeSequence) transition.f0.f0.choice;
            switch (lhsKind) {
                case 0 -> {
                    k1 = ((NodeChoice) ns.elementAt(1)).which;
                    n = ((NodeChoice) ns.elementAt(1)).choice;
                    f11 = ((Ident) ns.elementAt(0)).f0.choice.toString();
                    switch (k1) {
                        case 0, 1:
                            break;
                        case 2, 4, 3:
                            f11 = ((NodeSequence) n).elementAt(0).toString();
                            break;
                    }
                }
                case 1 -> f11 = ns.elementAt(0).toString();
                case 2 -> {
                    String f1 = ns.elementAt(0).toString();
                    n = ((NodeChoice) ns.elementAt(1)).choice;
                    int k2 = ((NodeChoice) ns.elementAt(1)).which;
                    String f2;
                    switch (k2) {
                        case 0 -> {
                            f2 = n.toString();
                            f11 = f1 + f2;
                        }
                        case 1 -> f11 = f1;
                    }
                }
                case 3 -> {
                    k1 = ((NodeChoice) ns.elementAt(1)).which;
                    f11 = switch (k1) {
                        case 0 -> "cons";
                        case 1 -> "[]";
                        default -> f11;
                    };
                }
                case 4 -> {
                    k1 = ((NodeChoice) ns.elementAt(2)).which;
                    f11 = switch (k1) {
                        case 0, 1 -> ((NodeChoice) ns.elementAt(2)).choice.toString();
                        default -> f11;
                    };
                }
            }
            int k11;
            ArrayList<String> args1 = new ArrayList<>();
            Node n111;
            final int lhsKind1 = transition.f0.f0.which;
            final NodeSequence ns1 = (NodeSequence) transition.f0.f0.choice;
            switch (lhsKind1) {
                case 0:
                    k11 = ((NodeChoice) ns1.elementAt(1)).which;
                    n111 = ((NodeChoice) ns1.elementAt(1)).choice;
                    switch (k11) {
                        case 0:
                            final NodeOptional nopt = (NodeOptional) ((NodeSequence) n111).elementAt(1);
                            if (nopt.present()) {
                                NodeSequence ns2 = (NodeSequence) nopt.node;
                                Ident id = (Ident) ns2.elementAt(0);
                                NodeListOptional nlo1 = (NodeListOptional) ns2.elementAt(1);
                                Vector<Node> l = nlo1.nodes;
                                args1.add(0, id.f0.choice.toString());
                                NodeSequence commaArg;
                                for (int i = 0; i < l.size(); i++) {
                                    commaArg = (NodeSequence) l.elementAt(i);
                                    id = (Ident) commaArg.elementAt(1);
                                    args1.add(i + 1, id.f0.choice.toString());
                                }
                            }
                            break;
                        case 1:
                            break;
                        case 2, 3, 4:
                            args1.add(0, ((Ident) ns1.elementAt(0)).f0.choice.toString());
                            args1.add(1, ((Ident) ((NodeSequence) n111).elementAt(1)).f0.choice.toString());
                            break;
                    }
                    break;
                case 1:
                    break;
                case 2:
                    n111 = ((NodeChoice) ns1.elementAt(1)).choice;
                    int k2 = ((NodeChoice) ns1.elementAt(1)).which;
                    switch (k2) {
                        case 0 -> args1.add(0, n111.toString());
                        case 1 -> args1.add(0, ((Ident) n111).f0.choice.toString());
                    }
                    break;
                case 3:
                    k11 = ((NodeChoice) ns1.elementAt(1)).which;
                    n111 = ((NodeChoice) ns1.elementAt(1)).choice;
                    switch (k11) {
                        case 0:
                            args1.add(0, ((Ident) ((NodeSequence) n111).elementAt(0)).f0.choice.toString());
                            args1.add(1, ((Ident) ((NodeSequence) n111).elementAt(2)).f0.choice.toString());
                            break;
                        case 1:
                            break;
                    }
                    break;
                case 4:
                    args1.add(0, ((Ident) ns1.elementAt(1)).f0.choice.toString());
                    args1.add(1, ((Ident) ns1.elementAt(3)).f0.choice.toString());
                    break;
            }
            data.transitions.add(new TAModelTransition(transition.f1.f0.f0.choice.toString(), args1, f11));
//            data.transitions.add(n2);
//            n0.addNode(n1);
        }
        n0.nodes.trimToSize();
        {
            if (true) return new PrologTransitions(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public Transition Transition() throws foo.parser.ParseException {
        LHS n0;
        RHS n1;
        n0 = LHS();
        n1 = RHS();
        {
            if (true) return new Transition(n0, n1);
        }
        throw new Error("Missing return statement in function");
    }

    final public RHS RHS() throws foo.parser.ParseException {
        Ident n0;
        n0 = Ident();
        {
            if (true) return new RHS(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public LHS LHS() throws foo.parser.ParseException {
        NodeChoice n0;
        NodeSequence n1;
        Ident n2;
        NodeChoice n3;
        NodeSequence n4;
        NodeToken n5;
        foo.parser.Token n6;
        NodeOptional n7 = new NodeOptional();
        NodeSequence n8;
        Ident n9;
        NodeListOptional n10;
        NodeSequence n11;
        NodeToken n12;
        foo.parser.Token n13;
        Ident n14;
        NodeToken n15;
        foo.parser.Token n16;
        NodeToken n17;
        foo.parser.Token n18;
        NodeToken n19;
        foo.parser.Token n20;
        NodeSequence n21;
        NodeToken n22;
        foo.parser.Token n23;
        Ident n24;
        NodeToken n25;
        foo.parser.Token n26;
        NodeSequence n27;
        NodeToken n28;
        foo.parser.Token n29;
        Ident n30;
        NodeToken n31;
        foo.parser.Token n32;
        NodeSequence n33;
        NodeToken n34;
        foo.parser.Token n35;
        Ident n36;
        NodeToken n37;
        foo.parser.Token n38;
        NodeSequence n39;
        NodeToken n40;
        foo.parser.Token n41;
        NodeToken n42;
        foo.parser.Token n43;
        NodeSequence n44;
        NodeToken n45;
        foo.parser.Token n46;
        NodeChoice n47;
        NodeToken n48;
        foo.parser.Token n49;
        Ident n50;
        NodeToken n51;
        foo.parser.Token n52;
        NodeSequence n53;
        NodeToken n54;
        foo.parser.Token n55;
        NodeChoice n56;
        NodeSequence n57;
        Ident n58;
        NodeToken n59;
        foo.parser.Token n60;
        Ident n61;
        NodeToken n62;
        foo.parser.Token n63;
        NodeToken n64;
        foo.parser.Token n65;
        NodeSequence n66;
        NodeToken n67;
        foo.parser.Token n68;
        NodeToken n69;
        foo.parser.Token n70;
        NodeSequence n71;
        NodeToken n72;
        foo.parser.Token n73;
        Ident n74;
        NodeChoice n75;
        NodeToken n76;
        foo.parser.Token n77;
        NodeToken n78;
        foo.parser.Token n79;
        Ident n80;
        NodeToken n81;
        foo.parser.Token n82;
        NodeToken n83;
        foo.parser.Token n84;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case IDENTIFIER:
            case QIDENT:
                n1 = new NodeSequence(2);
                n2 = Ident();
                n1.addNode(n2);
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case LBRACE:
                        n4 = new NodeSequence(4);
                        n6 = jj_consume_token(LBRACE);
                        n5 = JTBToolkit.makeNodeToken(n6);
                        n4.addNode(n5);
                        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                            case IDENTIFIER:
                            case QIDENT:
                                n10 = new NodeListOptional();
                                n8 = new NodeSequence(2);
                                n9 = Ident();
                                n8.addNode(n9);
                                label_7:
                                while (true) {
                                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                                        case COMMA:
                                            ;
                                            break;
                                        default:
                                            jj_la1[10] = jj_gen;
                                            break label_7;
                                    }
                                    n11 = new NodeSequence(2);
                                    n13 = jj_consume_token(COMMA);
                                    n12 = JTBToolkit.makeNodeToken(n13);
                                    n11.addNode(n12);
                                    n14 = Ident();
                                    n11.addNode(n14);
                                    n10.addNode(n11);
                                }
                                n10.nodes.trimToSize();
                                n8.addNode(n10);
                                n7.addNode(n8);
                                break;
                            default:
                                jj_la1[11] = jj_gen;
                                ;
                        }
                        n4.addNode(n7);
                        n16 = jj_consume_token(RBRACE);
                        n15 = JTBToolkit.makeNodeToken(n16);
                        n4.addNode(n15);
                        n18 = jj_consume_token(ARROW);
                        n17 = JTBToolkit.makeNodeToken(n18);
                        n4.addNode(n17);
                        n3 = new NodeChoice(n4, 0);
                        break;
                    case ARROW:
                        n20 = jj_consume_token(ARROW);
                        n19 = JTBToolkit.makeNodeToken(n20);
                        n3 = new NodeChoice(n19, 1);
                        break;
                    case BINOP:
                        n21 = new NodeSequence(3);
                        n23 = jj_consume_token(BINOP);
                        n22 = JTBToolkit.makeNodeToken(n23);
                        n21.addNode(n22);
                        n24 = Ident();
                        n21.addNode(n24);
                        n26 = jj_consume_token(ARROW);
                        n25 = JTBToolkit.makeNodeToken(n26);
                        n21.addNode(n25);
                        n3 = new NodeChoice(n21, 2);
                        break;
                    case ANYOP:
                        n27 = new NodeSequence(3);
                        n29 = jj_consume_token(ANYOP);
                        n28 = JTBToolkit.makeNodeToken(n29);
                        n27.addNode(n28);
                        n30 = Ident();
                        n27.addNode(n30);
                        n32 = jj_consume_token(ARROW);
                        n31 = JTBToolkit.makeNodeToken(n32);
                        n27.addNode(n31);
                        n3 = new NodeChoice(n27, 3);
                        break;
                    case COMMA:
                        n33 = new NodeSequence(3);
                        n35 = jj_consume_token(COMMA);
                        n34 = JTBToolkit.makeNodeToken(n35);
                        n33.addNode(n34);
                        n36 = Ident();
                        n33.addNode(n36);
                        n38 = jj_consume_token(ARROW);
                        n37 = JTBToolkit.makeNodeToken(n38);
                        n33.addNode(n37);
                        n3 = new NodeChoice(n33, 4);
                        break;
                    default:
                        jj_la1[12] = jj_gen;
                        jj_consume_token(-1);
                        throw new foo.parser.ParseException();
                }
                n1.addNode(n3);
                n0 = new NodeChoice(n1, 0);
                break;
            case NUMBER:
                n39 = new NodeSequence(2);
                n41 = jj_consume_token(NUMBER);
                n40 = JTBToolkit.makeNodeToken(n41);
                n39.addNode(n40);
                n43 = jj_consume_token(ARROW);
                n42 = JTBToolkit.makeNodeToken(n43);
                n39.addNode(n42);
                n0 = new NodeChoice(n39, 1);
                break;
            case ANYOP:
                n44 = new NodeSequence(3);
                n46 = jj_consume_token(ANYOP);
                n45 = JTBToolkit.makeNodeToken(n46);
                n44.addNode(n45);
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case NUMBER:
                        n49 = jj_consume_token(NUMBER);
                        n48 = JTBToolkit.makeNodeToken(n49);
                        n47 = new NodeChoice(n48, 0);
                        break;
                    case IDENTIFIER:
                    case QIDENT:
                        n50 = Ident();
                        n47 = new NodeChoice(n50, 1);
                        break;
                    default:
                        jj_la1[13] = jj_gen;
                        jj_consume_token(-1);
                        throw new foo.parser.ParseException();
                }
                n44.addNode(n47);
                n52 = jj_consume_token(ARROW);
                n51 = JTBToolkit.makeNodeToken(n52);
                n44.addNode(n51);
                n0 = new NodeChoice(n44, 2);
                break;
            case LSQBRACE:
                n53 = new NodeSequence(2);
                n55 = jj_consume_token(LSQBRACE);
                n54 = JTBToolkit.makeNodeToken(n55);
                n53.addNode(n54);
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case IDENTIFIER:
                    case QIDENT:
                        n57 = new NodeSequence(5);
                        n58 = Ident();
                        n57.addNode(n58);
